# vectorai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/api/: __init__.py  demo.py  documents.py  libraries.py  search.py
app/core/: __init__.py  config.py  database.py  dependencies.py  indexing.py  logging_config.py
app/models/: __init__.py  base.py
app/repositories/: __init__.py  base.py
app/services/: __init__.py  demo_service.py  document_service.py  library_service.py  search_service.py
app/utils/: __init__.py  embedding_utils.py
scripts/: tests.sh
tests/: __init__.py  test_demo_api.py  test_indexing.py
